--- a/playground/css/playground-theme.less
+++ b/playground/css/playground-theme.less
@@ -49,11 +49,7 @@
 .createSmartSwatch(
     @sName:            default,
     @sFill:            #fff,
-    @sHeading:         #000,
-    @sText:            #444,
-    @sComment:         #999,
-    @sLink:            blue,
-    @sBorderIntensity: 5%
+    @sBorderIntensity: 5%,
 );
 .createSmartSwatch(
     @sName:            atk-swatch-ink,
@@ -65,7 +61,7 @@
 );
 .createSmartSwatch(
     @sName:            atk-swatch-blue,
-    @sFill:            #0095ff
+    @sFill:            #0095ff,
 );
 .createSmartSwatch(
     @sName:            atk-swatch-red,
@@ -88,7 +84,7 @@
 @dialogOverlay:        fade(#000, 25%); // Color of modal dialog's overlay
 @tooltipColor:         fade(#000, 90%);
 @inputFocus:           red;
-@popoverArrow:        12px;
+@popoverArrow:         12px;
 
 
 // ==========================================================
