--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -98,6 +98,8 @@ h6, small, .atk-size-milli {
 }
 [data-text*=normal] {
     font-weight: normal;
+    letter-spacing: normal;
+    text-transform: none;
 }
 [data-text*=light] {
     font-weight: 300;
