--- a/playground/css/playground-theme.less
+++ b/playground/css/playground-theme.less
@@ -47,7 +47,7 @@
 // ==========================================================
 
 .createSmartSwatch(
-    @sName:            default,
+    @sName:            atk-swatch-default,
     @sFill:            #fff,
     @sBorderIntensity: 5%,
 );
