--- a/playground/docs/swatches.jade
+++ b/playground/docs/swatches.jade
@@ -20,7 +20,7 @@ block content
       p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
       .atk-comment This is comment.
       hr
-      div(data-margin="bottom" data-items="spacing-xs")
+      div(data-items="spacing-xs")
         a.atk-swatch-green.atk-button(href='#') Button
         a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
         a.atk-button(href='#' data-border="outline thick") Button
@@ -38,7 +38,7 @@ block content
       p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
       .atk-comment This is comment.
       hr
-      div(data-margin="bottom" data-items="spacing-xs")
+      div(data-items="spacing-xs")
         a.atk-swatch-green.atk-button(href='#') Button
         a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
         a.atk-button(href='#' data-border="outline thick") Button
